--- a/QA manual.html
+++ b/QA manual.html
@@ -6,6 +6,8 @@
     </head>
     <body>
     <br>
-    <a>"you are gay"</a>
+    <h1>"you are cool"</h1>
+    <h2>"Hello mir"</h2>
+    <br>
     </body>
 </html>
