--- a/QA manual.html
+++ b/QA manual.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>HW 11</title>
+        <title>first commit</title>
     </head>
     <body>
     <br>
