--- a/QA manual2.html
+++ b/QA manual2.html
@@ -5,9 +5,10 @@
         <title>second commit</title>
     </head>
     <body>
-        <br>
-        <h1>"Hello mir2</h1>
+        <h1>"Hi</h1>
         <br>
         <h2>"Hello one more world"</h2>
+        <br>
+        <h3>"Hi all</h3>
     </body>
 </html>
